syntax = "proto3";
package campaign_library.protobuf;

message CampaignAirfield {
   repeated CampaignBlock Blocks = 1;
   repeated CampaignAvailableAirframe AvailableAirframes = 2;
}
message CampaignAvailableAirframe {
   string Name = 1;
   string Script = 2;
   string Model = 3;
   string AvMods = 4;
   string AvSkins = 5;
   string AvPayloads = 6;
}
message CampaignBlock {
   string Model = 1;
   double Health = 2;
   int32 DestroyedComponents = 3;
   CampaignPosition Position = 4;
   string Category = 5;
}
message CampaignCountry {
   string Name = 1;
   int32 Code = 2;
}
message CampaignDay {
   int32 Year = 1;
   int32 Month = 2;
   int32 Day = 3;
   int32 DayInCampaign = 4;
}
message CampaignFrontLine {
   string Name = 1;
   repeated CampaignPosition PositionsInFrontLine = 2;
}
message CampaignObjective {
   CampaignObjectiveType Type = 1;
   repeated CampaignBlock Blocks = 2;
}
enum CampaignObjectiveType {
   UNKNOWN = 0;
   STRATEGIC = 1;
   POP_UP = 2;
}
message CampaignPosition {
   double X = 1;
   double Y = 2;
   double Z = 3;
}
message CampaignState {
   string Name = 1;
   repeated CampaignSupplyPoint Airfields = 2;
   repeated CampaignSupplyPoint Objectives = 3;
   CampaignFrontLine FrontLine = 4;
   CampaignDay Day = 5;
   CampaignPosition PlayAreaBoundaryNorthWest = 6;
   CampaignPosition PlayAreaBoundarySouthEast = 7;
   repeated CampaignBlock TemplatedBlocks = 8;
}
message CampaignSupplyPoint {
   string Name = 1;
   CampaignPosition Position = 2;
   CampaignCountry Country = 3;
   int32 SupplyLevel = 4;
   bool ActiveToday = 5;
   oneof subtype {
      CampaignAirfield CampaignAirfield = 11;
      CampaignObjective CampaignObjective = 12;
   }
}

